Refactor breeding and hatching commands; improve type handling and optimize UI interactions